[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xhydro"
authors = [
  {name = "Thomas-Charles Fortier Filion", email = "tcff_hydro@outlook.com"},
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-genesse.gabriel@ouranos.ca"},
  {name = "Sébastien Langlois"}
]
maintainers = [
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"},
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-genesse.gabriel@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["xhydro"]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  # "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology"
]
dynamic = ["description", "version"]
dependencies = [
  # Don't forget to sync changes between environment.yml, environment-dev.yml, and pyproject.toml!
  "cartopy",
  "geopandas",
  "haversine",
  "importlib-metadata <8.0", # Required for xesmf >=8.4.0,<8.6 to work on Windows
  "leafmap",
  "numpy <2.0.0",
  "pandas >=2.2.0",
  "planetary-computer",
  "pooch >=1.8.0",
  "pydantic >=2.0,<2.5.3",
  "pystac",
  "pystac-client",
  "pyyaml",
  "rasterio",
  "ravenpy >=0.15.0",
  "rioxarray",
  "spotpy",
  "stackstac >=0.5.1",
  "statsmodels",
  "tqdm",
  "xarray >=2023.11.0",
  "xarray-spatial",
  "xclim >=0.48.2",
  "xdatasets >=0.3.6",
  "xscen >=0.8.3",
  "xvec"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "pip >=24.2.0",
  "bump-my-version >=0.26.0",
  "watchdog >=4.0.0",
  "flake8 >=7.1.1",
  "flake8-alphabetize >=0.0.21",
  "flake8-rst-docstrings >=0.3.0",
  "flit >=3.9.0,<4.0",
  "tox >=4.18.0",
  "coverage >=7.5.0",
  "coveralls >=4.0.1",
  "mypy",
  "numpydoc >=1.8.0",
  "pytest >=8.3.2",
  "pytest-cov >=5.0.0",
  "black ==24.8.0",
  "blackdoc ==0.3.9",
  "isort ==5.13.2",
  "pre-commit >=3.5.0",
  "ruff >=0.5.7"
]
docs = [
  # Documentation and examples
  "furo",
  "hvplot",
  "ipykernel",
  "ipython",
  "jupyter_client",
  "nbsphinx",
  "nbval",
  "sphinx >=7.0.0",
  "sphinx-autoapi",
  "sphinx-codeautolink",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinxcontrib-napoleon",
  "xagg"
]
all = ["xhydro[dev]", "xhydro[docs]"]

[project.urls]
"Homepage" = "https://xhydro.readthedocs.io/"
"Changelog" = "https://xhydro.readthedocs.io/en/stable/changelog.html"
"Issue tracker" = "https://github.com/hydrologie/xhydro/issues"
"Source" = "https://github.com/hydrologie/xhydro"

[tool]

[tool.black]
target-version = [
  "py310",
  "py311",
  "py312",
  "py313"
]

[tool.bumpversion]
current_version = "0.4.0"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "src/xhydro/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_xhydro.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.coverage.paths]
source = ["src/xhydro/", "*/site-packages/xhydro/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-dev.yml",
  "environment.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/xhydro",
  "src/xhydro/testing/registry.txt",
  "tests/*.py",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  "Makefile",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xhydro*.rst",
  "docs/locales",
  "xhydro/testing/data/*"
]

[tool.isort]
profile = "black"
py_version = 310

[tool.mypy]
files = "."
python_version = 3.10
show_error_codes = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "ES01",
  "EX01",
  "GL01",
  "SA01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$',
  # any object starting with an underscore is a private object
  '\._\w+'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = "tests"
markers = [
  "requires_docs: mark tests that can only be run with documentation present (deselect with '-m \"not requires_docs\"')"
]

[tool.ruff]
src = ["xhydro"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xhydro"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/xhydro/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"
